--- a/src/main/resources/fxml/librarian/librarianResourcesTab.fxml
+++ b/src/main/resources/fxml/librarian/librarianResourcesTab.fxml
@@ -12,34 +12,40 @@
         <bottom>
             <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                 <buttons>
-                    <Button minWidth="0.0" prefHeight="25.0" prefWidth="143.0" text="Create New Resource" onAction="#openAddNewResourcePage" />
-                    <Button fx:id="btnViewResource" disable="true" text="View Resource/Copies" onAction="#openViewResourcePage" />
-                    <Button fx:id="btnEditResource" disable="true" text="Edit Resource" onAction="#openEditResourcePage" />
-                    <Button fx:id="btnDeleteResource" disable="true" text="Delete Resource" onAction="#deleteSelectedResource" />
+                    <Button minWidth="0.0" prefHeight="25.0" prefWidth="143.0" text="Create New Resource"
+                            onAction="#openAddNewResourcePage"/>
+                    <Button fx:id="btnViewResource" disable="true" text="View Resource/Copies"
+                            onAction="#openViewResourcePage"/>
+                    <Button fx:id="btnEditResource" disable="true" text="Edit Resource"
+                            onAction="#openEditResourcePage"/>
+                    <Button fx:id="btnDeleteResource" disable="true" text="Delete Resource"
+                            onAction="#deleteSelectedResource"/>
                 </buttons>
                 <BorderPane.margin>
-                    <Insets right="20.0" />
+                    <Insets right="20.0"/>
                 </BorderPane.margin>
             </ButtonBar>
         </bottom>
         <center>
-            <TableView fx:id="tblResources" prefHeight="281.0" prefWidth="416.0" BorderPane.alignment="CENTER" onMouseClicked="#enableButtonsIfResourceSelected">
+            <TableView fx:id="tblResources" prefHeight="281.0" prefWidth="416.0" BorderPane.alignment="CENTER"
+                       onMouseClicked="#enableButtonsIfResourceSelected">
                 <columns>
-                    <TableColumn fx:id="colType" prefWidth="70.0" text="Type" />
-                    <TableColumn fx:id="colTitle" prefWidth="478.0" text="Title" />
-                    <TableColumn fx:id="colYear" prefWidth="70.0" text="Year" />
+                    <TableColumn fx:id="colType" prefWidth="70.0" text="Type"/>
+                    <TableColumn fx:id="colTitle" prefWidth="478.0" text="Title"/>
+                    <TableColumn fx:id="colYear" prefWidth="70.0" text="Year"/>
                 </columns>
                 <BorderPane.margin>
-                    <Insets left="10.0" right="10.0" top="10.0" />
+                    <Insets left="10.0" right="10.0" top="10.0"/>
                 </BorderPane.margin>
             </TableView>
         </center>
         <top>
             <AnchorPane prefHeight="21.0" prefWidth="640.0" BorderPane.alignment="CENTER">
                 <Label layoutX="227.0" layoutY="14.0" text="Resource Type:"/>
-                <ChoiceBox fx:id="cmbType" layoutX="311.0" layoutY="10.0" prefHeight="25.0" prefWidth="112.0" onAction="#executeTypeChange">
+                <ChoiceBox fx:id="cmbType" layoutX="311.0" layoutY="10.0" prefHeight="25.0" prefWidth="112.0"
+                           onAction="#executeTypeChange">
                     <value>
-                        <ResourceType fx:value="ALL" />
+                        <ResourceType fx:value="ALL"/>
                     </value>
                     <items>
                         <FXCollections fx:factory="observableArrayList">
