--- a/src/main/resources/fxml/librarian/resources/viewResource.fxml
+++ b/src/main/resources/fxml/librarian/resources/viewResource.fxml
@@ -12,48 +12,55 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="400.0" prefWidth="680.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.crowvalley.tawelib.controller.librarian.resources.ViewResourceController">
+<VBox prefHeight="400.0" prefWidth="680.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.crowvalley.tawelib.controller.librarian.resources.ViewResourceController">
     <BorderPane prefHeight="200.0" prefWidth="200.0">
         <center>
             <AnchorPane prefHeight="389.0" prefWidth="309.0" BorderPane.alignment="CENTER">
-                <Label layoutX="102.0" layoutY="181.0" text="Title:" />
-                <Label layoutX="102.0" layoutY="212.0" text="Year:" />
-                <Label fx:id="lblOptional1" layoutX="88.0" layoutY="243.0" visible="false" />
-                <Label fx:id="lblOptional2" layoutX="76.0" layoutY="274.0" visible="false" />
-                <Label fx:id="lblOptional3" layoutX="93.0" layoutY="305.0" visible="false" />
-                <Label fx:id="lblOptional4" layoutX="99.0" layoutY="336.0" visible="false" />
-                <Label fx:id="lblOptional5" layoutX="28.0" layoutY="367.0" visible="false" />
+                <Label layoutX="102.0" layoutY="181.0" text="Title:"/>
+                <Label layoutX="102.0" layoutY="212.0" text="Year:"/>
+                <Label fx:id="lblOptional1" layoutX="88.0" layoutY="243.0" visible="false"/>
+                <Label fx:id="lblOptional2" layoutX="76.0" layoutY="274.0" visible="false"/>
+                <Label fx:id="lblOptional3" layoutX="93.0" layoutY="305.0" visible="false"/>
+                <Label fx:id="lblOptional4" layoutX="99.0" layoutY="336.0" visible="false"/>
+                <Label fx:id="lblOptional5" layoutX="28.0" layoutY="367.0" visible="false"/>
 
-                <TextField fx:id="txtTitle" disable="true" layoutX="136.0" layoutY="177.0" />
-                <TextField fx:id="txtYear" disable="true" layoutX="136.0" layoutY="208.0" />
-                <TextField fx:id="txtOptional1" disable="true" layoutX="136.0" layoutY="239.0" visible="false" />
-                <TextField fx:id="txtOptional2" disable="true" layoutX="136.0" layoutY="270.0" visible="false" />
-                <TextField fx:id="txtOptional3" disable="true" layoutX="136.0" layoutY="301.0" visible="false" />
-                <TextField fx:id="txtOptional4" disable="true" layoutX="136.0" layoutY="332.0" visible="false" />
-                <TextField fx:id="txtOptional5" disable="true" layoutX="136.0" layoutY="363.0" visible="false" />
+                <TextField fx:id="txtTitle" disable="true" layoutX="136.0" layoutY="177.0"/>
+                <TextField fx:id="txtYear" disable="true" layoutX="136.0" layoutY="208.0"/>
+                <TextField fx:id="txtOptional1" disable="true" layoutX="136.0" layoutY="239.0" visible="false"/>
+                <TextField fx:id="txtOptional2" disable="true" layoutX="136.0" layoutY="270.0" visible="false"/>
+                <TextField fx:id="txtOptional3" disable="true" layoutX="136.0" layoutY="301.0" visible="false"/>
+                <TextField fx:id="txtOptional4" disable="true" layoutX="136.0" layoutY="332.0" visible="false"/>
+                <TextField fx:id="txtOptional5" disable="true" layoutX="136.0" layoutY="363.0" visible="false"/>
 
-                <ImageView fx:id="imgResourcePic" fitHeight="155.0" fitWidth="149.0" layoutX="113.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="113.0" />
+                <ImageView fx:id="imgResourcePic" fitHeight="155.0" fitWidth="149.0" layoutX="113.0" layoutY="7.0"
+                           pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="113.0"/>
             </AnchorPane>
         </center>
         <left>
             <AnchorPane prefHeight="389.0" prefWidth="314.0" BorderPane.alignment="CENTER">
-                <Button fx:id="btnBack" layoutX="14.0" layoutY="14.0" text="&lt;&lt; Back" onAction="#goBack" />
-                <TableView fx:id="tblCopies" layoutX="14.0" layoutY="54.0" prefHeight="300.0" prefWidth="354.0" onMouseClicked="#enableButtonsIfResourceSelected" >
+                <Button fx:id="btnBack" layoutX="14.0" layoutY="14.0" text="&lt;&lt; Back" onAction="#goBack"/>
+                <TableView fx:id="tblCopies" layoutX="14.0" layoutY="54.0" prefHeight="300.0" prefWidth="354.0"
+                           onMouseClicked="#enableButtonsIfResourceSelected">
                     <columns>
-                        <TableColumn fx:id="colCurrentBorrower" prefWidth="120.0" text="Current Borrower" />
-                        <TableColumn fx:id="colLoanDuration" prefWidth="85.0" text="Loan Duration" />
-                        <TableColumn fx:id="colLocation" prefWidth="77.0" text="Location" />
-                        <TableColumn fx:id="colNumOfRequests" prefWidth="69.0" text="# Requests" />
+                        <TableColumn fx:id="colCurrentBorrower" prefWidth="120.0" text="Current Borrower"/>
+                        <TableColumn fx:id="colLoanDuration" prefWidth="85.0" text="Loan Duration"/>
+                        <TableColumn fx:id="colLocation" prefWidth="77.0" text="Location"/>
+                        <TableColumn fx:id="colNumOfRequests" prefWidth="69.0" text="# Requests"/>
                     </columns>
                 </TableView>
-                <ButtonBar layoutX="14.0" layoutY="353.0" prefHeight="40.0" prefWidth="289.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="353.0">
+                <ButtonBar layoutX="14.0" layoutY="353.0" prefHeight="40.0" prefWidth="289.0"
+                           AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="0.0"
+                           AnchorPane.topAnchor="353.0">
                     <buttons>
-                        <Button fx:id="btnAddCopy" prefHeight="25.0" prefWidth="119.0" text="Add Copy" onAction="#openAddCopyPage" />
-                        <Button fx:id="btnDelete" disable="true" text="Delete Copy" onAction="#deleteCopy" />
-                        <Button fx:id="btnViewRequests" disable="true" text="View Requests" onAction="#openViewRequestsPage" />
+                        <Button fx:id="btnAddCopy" prefHeight="25.0" prefWidth="119.0" text="Add Copy"
+                                onAction="#openAddCopyPage"/>
+                        <Button fx:id="btnDelete" disable="true" text="Delete Copy" onAction="#deleteCopy"/>
+                        <Button fx:id="btnViewRequests" disable="true" text="View Requests"
+                                onAction="#openViewRequestsPage"/>
                     </buttons>
                     <padding>
-                        <Insets left="-20.0" top="10.0" />
+                        <Insets left="-20.0" top="10.0"/>
                     </padding>
                 </ButtonBar>
             </AnchorPane>
