--- a/src/main/resources/fxml/user/userFinesAndPayments.fxml
+++ b/src/main/resources/fxml/user/userFinesAndPayments.fxml
@@ -16,12 +16,12 @@
         <center>
             <TableView fx:id="tblFinesAndPayments" prefHeight="345.0" prefWidth="529.0" BorderPane.alignment="CENTER">
                 <columns>
-                    <TableColumn fx:id="colAmount" prefWidth="80.0" text="Amount" />
-                    <TableColumn fx:id="colDate" prefWidth="80.0" text="Date" />
-                    <TableColumn fx:id="colType" prefWidth="357.0" text="Fine or Payment?" />
+                    <TableColumn fx:id="colAmount" prefWidth="80.0" text="Amount"/>
+                    <TableColumn fx:id="colDate" prefWidth="80.0" text="Date"/>
+                    <TableColumn fx:id="colType" prefWidth="357.0" text="Fine or Payment?"/>
                 </columns>
                 <BorderPane.margin>
-                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
                 </BorderPane.margin>
             </TableView>
         </center>
@@ -29,9 +29,11 @@
             <AnchorPane prefHeight="0.0" prefWidth="540.0" BorderPane.alignment="CENTER">
                 <Button layoutX="11.0" layoutY="11.0" text="&lt;&lt; Back" onAction="#loadUserHome"/>
                 <Label layoutX="157.0" layoutY="15.0" text="Between:"/>
-                <DatePicker fx:id="dateStart" layoutX="210.0" layoutY="11.0" prefHeight="25.0" prefWidth="120.0" onAction="#search"/>
+                <DatePicker fx:id="dateStart" layoutX="210.0" layoutY="11.0" prefHeight="25.0" prefWidth="120.0"
+                            onAction="#search"/>
                 <Label layoutX="335.0" layoutY="15.0" text="and"/>
-                <DatePicker fx:id="dateEnd" layoutX="360.0" layoutY="11.0" prefHeight="25.0" prefWidth="120.0" onAction="#search"/>
+                <DatePicker fx:id="dateEnd" layoutX="360.0" layoutY="11.0" prefHeight="25.0" prefWidth="120.0"
+                            onAction="#search"/>
                 <Button layoutX="485.0" layoutY="11.0" text="Clear" onAction="#clearDate"/>
             </AnchorPane>
         </top>
