--- a/src/main/resources/fxml/user/userLoans.fxml
+++ b/src/main/resources/fxml/user/userLoans.fxml
@@ -16,13 +16,13 @@
         <center>
             <TableView fx:id="tblLoans" prefHeight="298.0" prefWidth="520.0" BorderPane.alignment="CENTER">
                 <columns>
-                    <TableColumn fx:id="colCopy" prefWidth="272.0" text="Copy" />
-                    <TableColumn fx:id="colStartDate" prefWidth="82.0" text="Start Date" />
-                    <TableColumn fx:id="colEndDate" prefWidth="82.0" text="End Date" />
-                    <TableColumn fx:id="colReturnDate" prefWidth="82.0" text="Return Date" />
+                    <TableColumn fx:id="colCopy" prefWidth="272.0" text="Copy"/>
+                    <TableColumn fx:id="colStartDate" prefWidth="82.0" text="Start Date"/>
+                    <TableColumn fx:id="colEndDate" prefWidth="82.0" text="End Date"/>
+                    <TableColumn fx:id="colReturnDate" prefWidth="82.0" text="Return Date"/>
                 </columns>
                 <BorderPane.margin>
-                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
                 </BorderPane.margin>
             </TableView>
         </center>
@@ -30,9 +30,11 @@
             <AnchorPane prefHeight="0.0" prefWidth="540.0" BorderPane.alignment="CENTER">
                 <Button layoutX="11.0" layoutY="11.0" text="&lt;&lt; Back" onAction="#loadUserHome"/>
                 <Label layoutX="157.0" layoutY="15.0" text="Between:"/>
-                <DatePicker fx:id="dateStart" layoutX="210.0" layoutY="11.0" prefHeight="25.0" prefWidth="120.0" onAction="#search"/>
+                <DatePicker fx:id="dateStart" layoutX="210.0" layoutY="11.0" prefHeight="25.0" prefWidth="120.0"
+                            onAction="#search"/>
                 <Label layoutX="335.0" layoutY="15.0" text="and"/>
-                <DatePicker fx:id="dateEnd" layoutX="360.0" layoutY="11.0" prefHeight="25.0" prefWidth="120.0" onAction="#search"/>
+                <DatePicker fx:id="dateEnd" layoutX="360.0" layoutY="11.0" prefHeight="25.0" prefWidth="120.0"
+                            onAction="#search"/>
                 <Button layoutX="485.0" layoutY="11.0" text="Clear" onAction="#clearDate"/>
             </AnchorPane>
         </top>
