--- a/src/main/resources/fxml/login.fxml
+++ b/src/main/resources/fxml/login.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Text?>
 
 <VBox prefHeight="221.0" prefWidth="453.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.crowvalley.tawelib.controller.LoginController">
+      fx:controller="com.crowvalley.tawelib.controller.LoginController" fx:id="loginPage">
     <AnchorPane prefHeight="305.0" prefWidth="178.0" VBox.vgrow="ALWAYS">
         <Text fill="#4400ff" layoutX="97.0" layoutY="112.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TaweLib">
             <font>
