--- a/src/main/resources/fxml/user/userProfile.fxml
+++ b/src/main/resources/fxml/user/userProfile.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 
 <VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.crowvalley.tawelib.controller.user.UserProfileController">
+      fx:controller="com.crowvalley.tawelib.controller.user.UserProfileController" fx:id="userProfile">
     <BorderPane prefHeight="413.0" prefWidth="640.0">
         <center>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
