--- a/src/main/resources/fxml/user/userBrowseResources.fxml
+++ b/src/main/resources/fxml/user/userBrowseResources.fxml
@@ -40,8 +40,7 @@
         </bottom>
         <top>
             <AnchorPane prefHeight="21.0" prefWidth="640.0" BorderPane.alignment="CENTER">
-                <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" text="&lt;&lt; Back"
-                        onAction="#loadUserHome"/>
+                <Button fx:id="btnBack" layoutX="10.0" layoutY="10.0" text="&lt;&lt; Back" onAction="#goBack"/>
                 <Label layoutX="227.0" layoutY="14.0" text="Resource Type:"/>
                 <ChoiceBox fx:id="cmbType" layoutX="311.0" layoutY="10.0" prefHeight="25.0" prefWidth="112.0"
                            onAction="#executeTypeChange">
@@ -58,7 +57,7 @@
                     </items>
                 </ChoiceBox>
                 <TextField fx:id="txtSearch" layoutX="432.0" layoutY="10.0" onKeyPressed="#searchIfEnterPressed"/>
-                <Button layoutX="577.0" layoutY="10.0" text="Search" onAction="#search"/>
+                <Button fx:id="btnSearch" layoutX="577.0" layoutY="10.0" text="Search" onAction="#search"/>
             </AnchorPane>
         </top>
     </BorderPane>
